# rust-bootcamp-project

./: README.md  compose.yml  docker.sh
.github/workflows/: prod.yml
auth-service/: Cargo.toml  Dockerfile
auth-service/.sqlx/: query-49c9f8a2866add495d52365621f9f5f70a2caffcdabdb6fa53de52f3992cb544.json  query-6024446dd3edd57aa5cffa7fd16f666958258c664f03a80fb2cf784885ed8def.json
auth-service/migrations/: 20241107184617_create_users_table.up.sql
auth-service/src/: lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_banned_token_store.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mock_email_client.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_banned_token_store.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/store/: app_state.rs  mod.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  mod.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
